import ArrowLeftIcon from '../../assets/icons/arrow-left.svg';
import ArrowRightIcon from '../../assets/icons/arrow-right.svg';
import Backward15Icon from '../../assets/icons/backward15.svg';
import CardIcon from '../../assets/icons/card.svg';
import CastIcon from '../../assets/icons/cast.svg';
import CheckIcon from '../../assets/icons/check.svg';
import ClockIcon from '../../assets/icons/clock.svg';
import ClockOutlinedIcon from '../../assets/icons/clock-outlined.svg';
import CloseIcon from '../../assets/icons/close.svg';
import CoachIcon from '../../assets/icons/coach.svg';
import ExploreIcon from '../../assets/icons/explore.svg';
import ExternalIcon from '../../assets/icons/external.svg';
import FastForward15Icon from '../../assets/icons/fastforward15.svg';
import FilterIcon from '../../assets/icons/filters.svg';
import HearthOutlinedIcon from '../../assets/icons/hearth-outlined.svg';
import HearthIcon from '../../assets/icons/hearth.svg';
import HelpIcon from '../../assets/icons/help.svg';
import HomeIcon from '../../assets/icons/home.svg';
import MyClubIcon from '../../assets/icons/myclub.svg';
import NotificationsIcon from '../../assets/icons/notifications.svg';
import PauseIcon from '../../assets/icons/pause.svg';
import PlayIcon from '../../assets/icons/play.svg';
import PlusIcon from '../../assets/icons/plus.svg';
import ProfileIcon from '../../assets/icons/profile.svg';
import ProgressIcon from '../../assets/icons/progress.svg';
import RouteIcon from '../../assets/icons/route.svg';
import SearchIcon from '../../assets/icons/search.svg';
import SettingsIcon from '../../assets/icons/settings.svg';
import ShareIcon from '../../assets/icons/share.svg';
import ShopIcon from '../../assets/icons/shop.svg';
import ChevronRight from '../../assets/icons/ic_chevron-right.svg';
import CalendarIcon from '../../assets/icons/calendar.svg';
import ChromecastIcon from '../../assets/icons/chromecast.svg';
import GoogleFitIcon from '../../assets/icons/google-fit.svg';
import AppleHealthIcon from '../../assets/icons/apple-health.svg';
import AllFiltersIcon from '../../assets/icons/all-filters.svg';
import GetFitIcon from '../../assets/icons/get-fit.svg';
import GetStrongerIcon from '../../assets/icons/get-stronger.svg';
import PerformanceIcon from '../../assets/icons/performance.svg';
import ShapeAndToneIcon from '../../assets/icons/shape-and-tone.svg';
import WeightLossIcon from '../../assets/icons/weight-loss.svg';
import AllFiltersIconActive from '../../assets/icons/all-filters-active.svg';
import GetFitIconActive from '../../assets/icons/get-fit-active.svg';
import GetStrongerIconActive from '../../assets/icons/get-stronger-active.svg';
import PerformanceIconActive from '../../assets/icons/performance-active.svg';
import ShapeAndToneIconActive from '../../assets/icons/shape-and-tone-active.svg';
import WeightLossIconActive from '../../assets/icons/weight-loss-active.svg';
import FilterColouredIcon from '../../assets/icons/filter-coloured.svg';
import ProfileWalkthroughIcon from '../../assets/icons/profile-walkthrough.svg';
import HomeWalkthroughIcon from '../../assets/icons/home-walkthrough.svg';
import ExploreWalkthroughIcon from '../../assets/icons/explore-walkthrough.svg';
import ProgressWalkthroughIcon from '../../assets/icons/progress-walkthrough.svg';
import CoachWalkthroughIcon from '../../assets/icons/coach-walkthrough.svg';
import ClubsWalkthroughIcon from '../../assets/icons/clubs-walkthrough.svg';

export {
  ArrowLeftIcon,
  ArrowRightIcon,
  Backward15Icon,
  CardIcon,
  CalendarIcon,
  CastIcon,
  ChevronRight,
  CheckIcon,
  ClockIcon,
  ClockOutlinedIcon,
  CloseIcon,
  CoachIcon,
  ExploreIcon,
  ExternalIcon,
  FastForward15Icon,
  FilterIcon,
  HearthOutlinedIcon,
  HearthIcon,
  HelpIcon,
  HomeIcon,
  MyClubIcon,
  NotificationsIcon,
  PauseIcon,
  PlayIcon,
  PlusIcon,
  ProfileIcon,
  ProgressIcon,
  RouteIcon,
  SearchIcon,
  SettingsIcon,
  ShareIcon,
  ShopIcon,
  ChromecastIcon,
  GoogleFitIcon,
  AppleHealthIcon,
  AllFiltersIcon,
  GetFitIcon,
  GetStrongerIcon,
  PerformanceIcon,
  ShapeAndToneIcon,
  WeightLossIcon,
  AllFiltersIconActive,
  GetFitIconActive,
  GetStrongerIconActive,
  PerformanceIconActive,
  ShapeAndToneIconActive,
  WeightLossIconActive,
  FilterColouredIcon,
  ProfileWalkthroughIcon,
  HomeWalkthroughIcon,
  ExploreWalkthroughIcon,
  ProgressWalkthroughIcon,
  CoachWalkthroughIcon,
  ClubsWalkthroughIcon
};

export const iconLookup = {
  arrowLeft: ArrowLeftIcon,
  arrowRight: ArrowRightIcon,
  card: CardIcon,
  calendar: CalendarIcon,
  close: CloseIcon,
  clock: ClockIcon,
  coach: CoachIcon,
  explore: ExploreIcon,
  external: ExternalIcon,
  help: HelpIcon,
  home: HomeIcon,
  myClub: MyClubIcon,
  notifications: NotificationsIcon,
  profile: ProfileIcon,
  progress: ProgressIcon,
  search: SearchIcon,
  settings: SettingsIcon,
  share: ShareIcon,
  shop: ShopIcon,
  chromecast: ChromecastIcon,
  googleFit: GoogleFitIcon,
  appleHealth: AppleHealthIcon,
  allFilters: AllFiltersIcon,
  getFit: GetFitIcon,
  getStronger: GetStrongerIcon,
  performance: PerformanceIcon,
  shapeAndTone: ShapeAndToneIcon,
  weightLoss: WeightLossIcon,
  allFiltersActive: AllFiltersIconActive,
  getFitActive: GetFitIconActive,
  getStrongerActive: GetStrongerIconActive,
  performanceActive: PerformanceIconActive,
  shapeAndToneActive: ShapeAndToneIconActive,
  weightLossActive: WeightLossIconActive,
  FilterColoured: FilterColouredIcon,
  profileWalkthrough: ProfileWalkthroughIcon,
  homeWalkthrough: HomeWalkthroughIcon,
  exploreWalkthrough: ExploreWalkthroughIcon,
  progressWalkthrough: ProgressWalkthroughIcon,
  coachWalkthrough: CoachWalkthroughIcon,
  clubsWalkthrough: ClubsWalkthroughIcon
};
