...
          navigation={_props.navigation}
          position={_props.position}
        />
      )}
    >
      <Tab.Screen
        options={{ tabBarTestID: 'for-you-tab' }}
        name="For You"
        component={ForYouScreen}
      />
      <Tab.Screen options={{ tabBarTestID: 'feed-tab' }} name="Feed" component={FeedScreen} />
    </Tab.Navigator>,
    <>
      <FooterFromConfig
        config={screenFooter?.bottomButtons}
        navigation={navigation}
        dispatch={dispatch}
...
