import React from 'react';
import { View, Text } from 'react-native';

const QRScreen = () => {
  return (
    <View testID="qrscreen" style={{ flex: 1, justifyContent: 'center', alignItems: 'center' }}>
      <Text>QRScreen!</Text>
    </View>
  );
};

export default QRScreen;
