...
      <Text>Hello there</Text>
    </View>,
    <View style={{ padding: 16 }}>
      <BFButton title="Share here!" onPress={() => share('Workout', 'mock-link', undefined)} />
    </View>,
    <MediaCardCarousel
      testID="first-carousel"
      data={infList}
      onEndReached={() => {
        infListSet(refreshKeys(infList.concat(infList)));
      }}
    />,
    <MediaCardCarousel data={mediaItems} small />,
...
